resolve all bugs